<resources>
    <string name="app_name">ResaTravels</string>
    <string name="R_homepage_des">\" Plan Your travel anytime, anywhere... \"</string>
    <string name="R_homepage_text1">Explore your deal...</string>
    <string name="R_homepage_hotel">Hotels</string>
    <string name="R_homepage_rides">Rides in Places</string>
    <string name="R_homepage_safari">Guide and Safari</string>
    <string name="R_homepage_accessories">Travelling Accessories</string>
    <string name="R_travelling_accessories">Travelling Accessories..</string>
    <string name="R_rupees">Rs .</string>
    <string name="R_travelling_acc_info">Travelling Accessory Info</string>
    <string name="R_des">Description :</string>
    <string name="R_price">Price :</string>
    <string name="R_quantity">Quantity :</string>
    <string name="R_total">Total Amount :</string>
    <string name="R_view_total">View Total</string>
    <string name="R_confirm">Confirm</string>
    <string name="R_cancel">Cancel</string>
    <string name="R_select_q">Select Quantity</string>
    <string name="R_add">Add Item</string>
    <string name="R_aceessory_details">Accessory Details</string>
    <string name="R_name">Accessory Name :</string>
    <string name="R_update">Update</string>
    <string name="R_delete">Delete</string>
    <string name="R_update_details">Update Accessory Details</string>
    <string name="R_add_details">Add Accessory Details</string>
    <string name="R_save">Save</string>
    <string name="R_enter_name">Enter Name</string>
    <string name="R_add_des">Add Description</string>
    <string name="R_enter_amount">Enter Amount</string>
    <string name="R_enter_quantity">Enter Quantity</string>
    <string name="R_rem_quantity">Remaining Quantity :</string>
    <string name="R_next">Next</string>
    <string name="R_register">Register Now!</string>
    <string name="R_registerDescription">Let\'s get you set up...</string>
    <string name="R_user_name">Name :</string>
    <string name="R_user_email">Email:</string>
    <string name="R_user_phone">Phone Number :</string>
    <string name="R_user_password">Password :</string>
    <string name="R_user_confirmPW">Confirm Password :</string>
    <string name="R_user_register">Register</string>
    <string name="R_enter_email">Enter Email</string>
    <string name="R_enter_phone">Enter Phone Number</string>
    <string name="R_acc">Already have an account?</string>
    <string name="button">Button</string>
    <string name="SearchUsing">Search Using Location</string>
    <string name="Hotel1">Hotel 1</string>
    <string name="Hotel2">Hotel 2</string>
    <string name="Hotel3">Hotel3</string>
    <string name="marino_beach_colombo">Marino Beach Colombo</string>
    <string name="TheOceanColombo">"The Ocean Colombo "</string>
    <string name="JetwingColomboSevenOpensinnewwindow">Jetwing Colombo Seven Opens in new window</string>
    <string name="Colombo">Colombo</string>
    <string name="hotel_and_resort_registration">Hotel And Resort Registration</string>
    <string name="Description">Description</string>
    <string name="Facilities">Facilities</string>
    <string name="Availibility">Availibility</string>
    <string name="Rules">Rules</string>
    <string name="strategically_located_in_colombo_cinnamon_red_colombo_offers_modern_and_comfortable_accommodations_with_free_wifi_access_throughout_the_property">Strategically located in Colombo, Cinnamon red Colombo offers modern and comfortable accommodations with free WiFi access throughout the property.</string>
    <string name="marino_beach_colombo_has_a_restaurant_outdoor_swimming_pool_a_fitness_center_and_bar_in_colombo">Marino Beach Colombo has a restaurant, outdoor swimming pool, a fitness center and bar in Colombo.</string>
    <string name="login_page">Login Page</string>
    <string name="enter_your_passowrd">Enter Your Passowrd</string>
    <string name="enter_your_user_name">Enter Your User Name</string>
    <string name="register_now">Register Now</string>
    <string name="login">Login</string>
    <string name="RegisterPage">Register Page</string>
    <string name="Register">Register</string>
    <string name="ConfirmYourPassword">Confirm Your Password</string>
    <string name="you_e_mail_address">You E-mail Address</string>
    <string name="your_company_service_name">Your Company/Service Name</string>
    <string name="if_you_have_a_account">If You Have A Account ?</string>
    <string name="Delete_btn">Delete</string>
    <string name="Update_Btn">Update</string>
    <string name="SearchUsingID">Search Using ID Number</string>
    <string name="Mitsubishi4DR5J44LONGWHEEL1980">Mitsubishi 4DR5 J44 LONG WHEEL 1980</string>
    <string name="passenger_count">Passenger count :</string>
    <string name="price_per_day">Price Per Day :</string>
    <string name="location">Location :</string>
    <string name="book">Book</string>
    <string name="h_home_to_place">PLACES</string>
    <string name="h_user_place_name_galle">Galle</string>
    <string name="h_user_place_name_kandy">Kandy</string>
    <string name="h_user_place_name_nuwaraeliya">Nuwaraeliya</string>
    <string name="h_user_place_name_matara">Matara</string>
    <string name="h_user_place_to_vehicle_courage_text">Explore the Places and rent a vehicle to enjoy the beauty of the place in full spirit without any hustle and bustle...
   </string>
    <string name="h_user_place_description_galle">Today the Galle Fort is still alive and vibrant and a great place to visit. The Dutch Reformed Church, The Galle Lighthouse,The Historical Mansion Museum ,Temples and Mosques are some of the main places that you must visit.</string>
    <string name="h_user_place_description_m">Matara is a busy town booming with commercial activities.You must visit Matara atleast ones in your lifetime to know Sri Lanka better.Additionally, the beachfront paints beautiful scenes along the coast of the city.</string>
    <string name="h_user_place_description_n">Nuwara Eliya is a city in the hill country. Nuwara Eliya has a subtropical highland climate.The town\'s attractions include the golf course, trout streams, Victoria Park, and boating or fishing on Lake Gregory. </string>
    <string name="h_user_place_description_k">Kandy is popular due to historical value, colonial heritage, forest cover and tooth relic temple.Due to the beautiful scenery, mild climate, colonial heritage, diverse culture, delicious cuisine, friendly and open-minded people and a lot more, hundreds of thousands of travellers drive to Kandy every day.</string>
    <string name="h_user_place_to_vehicle">RENT A VEHICLE</string>
    <string name="h_user_search_by_vehicle">Search Vehicle</string>
    <string name="h_user_view_vehicle_name1">TOYOTA PREMIO</string>
    <string name="h_user_view_vehicle_name2">TOYOTA KDH</string>
    <string name="h_user_view_vehicle_name3">MERCEDES MINIVAN</string>
    <string name="h_user_view_vehicle_desc_name1">KN-0495  Close to SLIIT Malabe . Maximum 5 passengers. Rs.4000 per day. Contact Suresh 0717109741</string>
    <string name="h_user_view_vehicle_desc_name2">CAX-0477  Close to Pizza hut Galle Town . Maximum 14 passengers. Rs.15000 per day. Contact Amal 0713109865</string>
    <string name="h_user_view_vehicle_desc_name3">NB-0484  Close to SLIIT Malabe . Maximum 8 passengers. Rs.9000 per day. Contact Nisal 0717109887</string>
    <string name="h_user_click_vehicle_to_booking">BOOK NOW</string>
    <string name="h_user_book_form_field_place">Place</string>
    <string name="h_user_book_form_field_vehicle">Vehicle</string>
    <string name="h_user_book_form_field_plateno">Register Plate</string>
    <string name="h_user_book_form_field_adulno">Number of adults</string>
    <string name="h_user_book_form_field_childno">Number of Children</string>
    <string name="h_user_book_form_field_days">Number of days</string>
    <string name="h_user_book_form_input_place">Enter Destination</string>
    <string name="h_user_book_form_input_vehicle">Enter type of vehicle</string>
    <string name="h_user_book_form_input_plateNo">Enter registration plate </string>
    <string name="h_user_book_form_confirm">CONFIRM</string>
    <string name="h_user_book_form_cancel">CANCEL</string>
    <string name="h_user_book_form_input_date">Enter date</string>
    <string name="h_user_book_form_field_date">Check In Date</string>
    <string name="h_user_profile_title">USER PROFILE</string>
    <string name="h_user_profile_title_name">Name</string>
    <string name="h_user_profile_title_mobile">Mobile</string>
    <string name="h_user_profile_title_email">Email</string>
    <string name="h_user_profile_update">UPDATE</string>
    <string name="h_user_profile_delete">DELETE</string>
    <string name="h_user_profile_retrieve_name">David Beckom</string>
    <string name="h_user_profile_retrieve_mobile">0713109896</string>
    <string name="h_user_profile_retrieve_email">davidb@gmail.com</string>
    <string name="h_admin_add_place_title">ADD PLACE</string>
    <string name="h_admin_add_place_title_name">Name</string>
    <string name="h_admin_add_place_title_province">Province</string>
    <string name="h_admin_add_place_title_mobile">Mobile</string>
    <string name="h_admin_add_place_title_description">Description</string>
    <string name="h_admin_add_place_input_name">Enter destination name</string>
    <string name="h_admin_add_place_input_mobile">Enter contact number</string>
    <string name="h_admin_add_place_input_province">Enter province</string>
    <string name="h_admin_add_place_input_description">Enter description</string>
    <string name="h_admin_add_place_confirm">SUBMIT</string>
    <string name="h_admin_edit_place_title">EDIT PLACE</string>
    <string name="h_admin_edit_place_input_name">Galle</string>
    <string name="h_admin_edit_place_input_mobile">0713105253</string>
    <string name="h_admin_edit_place_input_province">Southern Province</string>
    <string name="h_admin_edit_place_input_description">Galle fort is one of the main tourist attraction</string>
    <string name="h_admin_edit_place_update">UPDATE</string>
    <string name="h_admin_edit_place_delete">DELETE</string>
    <string name="h_admin_add_vehicle_title">REGISTER VEHICLE</string>
    <string name="h_admin_add_vehicle_title_sub1">VEHICLE DETAILS</string>
    <string name="h_admin_add_vehicle_title_sub2">OWNER DETAILS</string>
    <string name="h_admin_add_vehicle_title_type">Type</string>
    <string name="h_admin_add_vehicle_title_make">Make</string>
    <string name="h_admin_add_vehicle_title_plate">Register Plate</string>
    <string name="h_admin_add_vehicle_title_location">Location</string>
    <string name="h_admin_add_vehicle_title_people">Maximum Passengers</string>
    <string name="h_admin_add_vehicle_title_price">Price Per Day</string>
    <string name="h_admin_add_vehicle_title_description">Description</string>
    <string name="language">Language</string>
    <string name="fname">First</string>
    <string name="name">Name</string>
    <string name="lname">Last</string>
    <string name="age_">Age</string>
    <string name="address">Address</string>
    <string name="skills">Skills</string>
    <string name="egguide">Edit Guide Details</string>
    <string name="egupdate">Update</string>
    <string name="egdelete">Delete</string>
    <string name="experiences">In years</string>
    <string name="searchdriver">Search Driver</string>
    <string name="dob_">YYYY/MM/DD</string>
    <string name="email_">example@gmail.com</string>
    <string name="phone">1234567890</string>
    <string name="gender">Gender :</string>
    <string name="address_">Address :</string>
    <string name="email_address">Email Address :</string>
    <string name="experince">Experince :</string>
    <string name="other_skills">Other Skills</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="mobilee">Mobile :</string>
    <string name="age">Age :</string>
</resources>