<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/header"
    tools:context=".UpdateDeleteDriver">


    <View
        android:id="@+id/view13"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_baseline_person_pin_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view14"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <View
        android:id="@+id/view14"
        android:layout_width="41dp"
        android:layout_height="45dp"
        android:layout_marginStart="38dp"
        android:background="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <View
        android:id="@+id/view15"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/ic_baseline_shopping_cart_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view17"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <View
        android:id="@+id/view17"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="41dp"
        android:background="@drawable/ic_baseline_location_on_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view18"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <View
        android:id="@+id/view18"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="41dp"
        android:background="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <View
        android:id="@+id/view20"
        android:layout_width="158dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/untitled_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <View
        android:id="@+id/view22"
        android:layout_width="41dp"
        android:layout_height="45dp"
        android:layout_marginStart="155dp"
        android:background="@drawable/ic_baseline_menu_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"  />

    <View
        android:id="@+id/view21"
        android:layout_width="58dp"
        android:layout_height="61dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/untitled_2_copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/searchd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchdriver"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <SearchView
        android:id="@+id/search"
        android:layout_width="354dp"
        android:layout_height="36dp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="187dp" />

    <Button
        android:id="@+id/pbadr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:text="@string/Update_Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />

    <Button
        android:id="@+id/pbadr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E91E63"
        android:text="@string/Delete_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />


</androidx.constraintlayout.widget.ConstraintLayout>